# fnguide_crawling

./: .env  .gitignore  BUILD_GUIDE.md  README.md  SETUP.md  build.bat  build.py  build_exe.bat  code.txt  code_test.txt  collected_data_20250526_104759.csv  collected_data_20250526_104944.csv  install_env.bat  main.py  main2.py  main_quater.py  main_year.py  plan.md  pyproject.toml  requirements.txt  run.bat
.cursor/rules/: run.mdc
.github/workflows/: build.yml
config/: config.py  window_settings.json
deprecated/: main2.py
src/config/: config.py
src/core/: __init__.py  crawler_service.py
src/crawler/: base.py  fnguide.py
src/gui/: crawler_worker.py  fnguide_worker.py  main_window.py
src/utils/: __init__.py  file_utils.py  logging_utils.py
