[project]
name = "fnguide"
version = "0.1.1-250615"
description = "FnGuide 웹 크롤러"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.4.0",
    "selenium>=4.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pandas>=1.3.0",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=3.8.0",
    "lxml>=4.9.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gui", "src/crawler", "src/auth"]
