[project]
name = "fnguide-crawler"
version = "1.0.0"
description = "FnGuide 웹사이트에서 기업 재무제표 데이터를 크롤링하는 GUI 애플리케이션"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "FnGuide Crawler Team"}
]
keywords = ["crawler", "finance", "fnguide", "gui", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "PyQt5>=5.15.10",
    "selenium>=4.15.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.1.3",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.1",
    "lxml>=4.9.3",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.3.0",
    "pyinstaller-hooks-contrib>=2023.10",
]

[project.scripts]
fnguide-crawler = "src.gui.main_window:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/docs",
    "/README.md",
    "/pyproject.toml",
    "/requirements.txt",
    "/build.py",
    "/build.bat",
    "/run_GUI.py",
    "/code.txt",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
